# Cortex-Neural-Vault

./: .gitignore  README.md  build.sh
client/: README.md  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/components/chat/: ChatContainer.vue
client/src/components/developer/: LogsViewer.vue  MassMockDialog.vue  RecordDetailsDialog.vue  VaultTable.vue
client/src/components/layout/: Sidebar.vue
core/: Cargo.toml  README.md
core/src/: lib.rs  lib.rs_orj
orchestrator/: .air.toml  README.md  chat.go  go.mod  main.go  main_db.cognitive.bak  main_db.cognitive.graph  whisper.go
