[package]
name = "cortex_core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
zeroize = { version = "1.7", features = ["derive"] } # Belleği güvenli temizlemek için
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]